# sbb_binarization

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Makefile  README.md  make.sh  ocrd-tool.json  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: docker-image.yml  test.yml
sbb_binarize/: __init__.py  cli.py  ocrd-tool.json  ocrd_cli.py  sbb_binarize.py
